# agent-skill-command-org

./: CLAUDE.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml
ecosystem-mapper/: .gitignore  pyproject.toml
ecosystem-mapper/commands/: ecosystem-map.md
ecosystem-mapper/src/ecosystem_mapper/: __init__.py  cli.py  config.py  models.py
ecosystem-mapper/src/ecosystem_mapper/analyzers/: __init__.py  cross_references.py
ecosystem-mapper/src/ecosystem_mapper/extractors/: __init__.py  agents.py  base.py  capabilities.py  commands.py  gsd.py  handoffs.py  hooks.py  mcp_servers.py  plans.py  plugins.py  settings.py  wrapups.py
ecosystem-mapper/src/ecosystem_mapper/outputs/: __init__.py  html_viz.py  json_export.py
ecosystem-mapper/src/ecosystem_mapper/parsers/: __init__.py  body_parser.py
ecosystem-mapper/templates/: visualization.html
ecosystem-mapper/tests/: test_body_parser.py  test_cross_references.py  test_extractors.py
